Commit Thursday October 18th 12:15PM New files added - [Attendees,Register,adminMenu,android,blue-flyer,fonts,fonts,imagelists,ios,android] Files modified - [AddEvent,AddVenue,EditEvents,EventDetails,EventsList,Login,Main,VCADB_users,securityService,webapp,.wmproject.properties,project-security.xml,pages-config.json] Removed files - [SignUp,android,fonts,fonts,ios,mobile]

--- a/src/main/webapp/themes/blue-flyer/android/variables.less
+++ b/src/main/webapp/themes/blue-flyer/android/variables.less
@@ -14,7 +14,7 @@
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         #2196f3;
+@brand-primary:         #0D406B;
 @brand-success:         #4CAF50;
 @brand-info:            #03A9F4;
 @brand-warning:         #FFB300;
@@ -37,7 +37,7 @@
 //## Settings for some of the most global styles.
 
 //** Background color for `<body>`.
-@body-bg:               #fff;
+@body-bg:               #f1f2f3;
 //** Global text color on `<body>`.
 @text-color:            #5e5e5e;
 
@@ -192,7 +192,7 @@
 //##
 
 //** `<input>` background color
-@input-bg:                       transparent;
+@input-bg:                       rgba(0, 0, 0, 0);
 //** `<input disabled>` background color
 @input-bg-disabled:              @gray-lighter;
 
@@ -438,9 +438,9 @@
 
 @nav-tabs-link-hover-border-color:          @gray-lighter;
 
-@nav-tabs-active-link-hover-bg:             transparent;
+@nav-tabs-active-link-hover-bg:             #fff;
 @nav-tabs-active-link-hover-color:          @gray;
-@nav-tabs-active-link-hover-border-color:   #ddd;
+@nav-tabs-active-link-hover-border-color:   #4caf50;
 
 @nav-tabs-justified-link-border-color:            #ddd;
 @nav-tabs-justified-active-link-border-color:     @body-bg;
