--- a/src/main/webapp/themes/blue-enterprise/android/variables.less
+++ b/src/main/webapp/themes/blue-enterprise/android/variables.less
@@ -14,7 +14,7 @@
 @gray-light:             lighten(@gray-base, 46.7%); // #777
 @gray-lighter:           lighten(@gray-base, 93.5%); // #eee
 
-@brand-primary:         #0D406B;
+@brand-primary:         #f28421;
 @brand-success:         #4CAF50;
 @brand-info:            #03A9F4;
 @brand-warning:         #FFB300;
@@ -438,9 +438,9 @@
 
 @nav-tabs-link-hover-border-color:          @gray-lighter;
 
-@nav-tabs-active-link-hover-bg:             #fff;
+@nav-tabs-active-link-hover-bg:             transparent;
 @nav-tabs-active-link-hover-color:          @gray;
-@nav-tabs-active-link-hover-border-color:   #4caf50;
+@nav-tabs-active-link-hover-border-color:   #ddd;
 
 @nav-tabs-justified-link-border-color:            #ddd;
 @nav-tabs-justified-active-link-border-color:     @body-bg;
